nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginxapp
spec:
  containers:
  - name: nginx-pod
    image: nginx:latest
    ports:
      - containerPort: 80
