testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "nginxapp"
  namespace: default
  labels:
    app: "nginxapp"
spec:
  containers:
  - name: nginxapp-pod
    image: "nginx:latest"
    ports:
    - containerPort:  80
  restartPolicy: Always
