nginx-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-service
  namespace: default
spec:
  selector:
    app: nginx-deploy-app
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
   - protocol: TCP
     name: http
     port: 8080
     targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    #nodePort:
